--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Brad-Becker/movie-flix/issues"
   },
-  "homepage": "https://github.com/Brad-Becker/movie-flix#readme"
+  "homepage": "https://github.com/Brad-Becker/movie-flix#readme",
+  "dependencies": {
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2"
+  }
 }
